fixed scrollbar styles that were broken by daisyui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,26 +12,46 @@ header {
 body {
 	background: linear-gradient(
 		180deg,
-		rgba(240,230,230) 0%,
+		rgba(240, 230, 230) 0%,
 		rgb(242, 230, 230) 60%,
-		rgba(240,230,230) 100%
+		rgba(240, 230, 230) 100%
 	);
 }
- 
+
 @keyframes save-flash {
-    0% {
-       
-        transform: scale(1);
-    }
-    30% {
-        transform: scale(1);
-    }
-    100% {
-        z-index: 999;
-        transform: scale(1.09);
-        transform-origin: center center;
-        background-color: oklch(var(--p));
-    }
+	0% {
+		transform: scale(1);
+	}
+	30% {
+		transform: scale(1);
+	}
+	100% {
+		z-index: 999;
+		transform: scale(1.09);
+		transform-origin: center center;
+		background-color: oklch(var(--p));
+	}
 }
 
+
 /* ---------------------------- custom scrollbar ---------------------------- */
+/* 
+ * https://github.com/saadeghi/daisyui/commit/f0ea3418d8556c36df86824169bf9de1a65a7815
+ */
+* {
+	scrollbar-color: unset;
+}
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+} 
+::-webkit-scrollbar-track {
+    background: transparent;
+} 
+::-webkit-scrollbar-thumb {
+    background: rgba(100,100,100,0.6);
+    border-radius: 4px;
+} 
+::-webkit-scrollbar-thumb:hover { 
+    background: rgba(100,100,100,0.7);
+}
